feo.scss
@import './src/default-tokens';
@import './src/reset';

/*******
* Generic styling
*******/
html,
body {
  min-width: var(--size-0);
  overflow: hidden;
  color: var(--black);
  font-family: var(--sans-serif);
  background-color: var(--white);
}

// HEADINGS
h1,
h2,
h3 {
  width: 100%;
  line-height: 1.4;
}

h1 {
  font-size: var(--text-3);
}

h2 {
  font-size: var(--text-2);
}

h3 {
  font-size: var(--text-1);
}

/*******
* Layout classes
*******/
@import './src/layout/center';
@import './src/layout/flow';
@import './src/layout/pancake';
@import './src/layout/split';
@import './src/layout/tiles';
@import './src/layout/grail';

/*******
* Utility classes
*******/
@import './src/utilities/background';
@import './src/utilities/place-center';
@import './src/utilities/typography';
@import './src/utilities/spacing';
@import './src/utilities/hidden';
@import './src/utilities/click-area';
@import './src/utilities/flexbox';
@import './src/utilities/radius';
@import './src/utilities/border';

